Edits to abstract and chapter 1 of guidelines paper

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -47,12 +47,15 @@ The LRP is a reference point that generally represents a threshold to stock stat
 
 Pacific salmon are unique among marine fish stocks due to their high levels of intraspecific diversity which gives rise to a large range in data availability, considerations, and approaches for assessments and LRP development.  These differences necessitate guidance on LRP methods that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. In prep.)^[Marentette, J.R., Barrett, T., Cogliati, K.M., Ings, D., Ladell, J., Thiess, M.  Operationalizing Serious Harm: Existing Guidance and Contemporary Canadian Practices. Can. Sci Avis. Secr. Working Paper In prep.].
 
-Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precautionary Approach Framework for Pacific salmon. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting Conservation Units (CUs), are defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
+Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precautionary Approach Framework for Pacific salmon. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting Conservation Units (CUs), where a CU is defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
 
 
 Genetic and phenotypic diversity among CUs is important because it allows for diversity in responses to threats and environmental drivers, contributing to the sustainability of the species and the ecosystem services they provide [@pricePortfolioSimplificationArising2021a].  Portfolio effects have been shown to dampen interannual variance in aggregate-level abundances due to independent dynamics among component sub-populations or CUs [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity may buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes. However, deterioration of portfolio effects have been observed for Pacific salmon in Canada due to synchronous declining trends in abundances related to changes in climate and marine and freshwater habitats, as well as fishing practices that have historically overfished weak stocks [@pricePortfolioSimplificationArising2021a].
 
-Under the WSP, the status of individual CUs is inferred by comparing status indicators to biological benchmarks delineating three zones: Green, Amber, and Red. These zones represent increasing conservation concern from Green to Red requiring increasing management intervention. The lower benchmark, delineating the Red and Amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada [@holtIndicatorsStatusBenchmarks2009; @dfoCanadaPolicyConservation2005]. In practice, CUs in the WSP Red zone tend to align with Endangered or Threatened COSEWIC statuses, and Green with Not at Risk COSEWIC categories.<!--CH: added this for Sue. However, I don't think we can comment on the presence or size of buffer--> 
+Under the WSP, the status of individual CUs is inferred by comparing status indicators to biological benchmarks delineating three zones: Green, Amber, and Red. These zones represent increasing conservation concern from Green to Red requiring increasing management intervention. The lower benchmark, delineating the Red and Amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", where COSEWIC is the Committee on the Status of Endangered Wildlife in Canada [@holtIndicatorsStatusBenchmarks2009; @dfoCanadaPolicyConservation2005]. In practice, CUs in the WSP Red zone tend to align with Endangered or Threatened COSEWIC statuses, and Green with Not at Risk COSEWIC categories.<!--CH: added this for Sue. However, I don't think we can comment on the presence or size of buffer  
+
+
+KH: Is the last sentence always true?  IF coho are assessed as Threatened by COSEWIC, but all CUs are either Amber or Green/Amber in the WSP assessment. --> 
 
 
 
@@ -134,11 +137,11 @@ This work was supported by a technical working group composed of DFO and First N
 <!--CH: Sue suggested omitting: The LRPs considered here focus on characterizing serious harm to the stock based on levels of and/or trends in spawner abundance. We have not included metrics or benchmarks of the status of salmon habitat [@stalbergCanadaPolicyConservation2009] or the ecosystem as a whole, though future analyses could include a more thorough characterization of the nature of serious harm to salmon [as in @dfoUpdateAssessmentFramework2016].-->
 
 
-While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step. Also, our applications of LRP methods to case studies are for illustrative purposes only, and are not meant to be formal estimation of LRPs for those SMUs. Furthermore, additional LRPs could be developed in the future, aligned with the key principles outlined here (Section \@ref(principles)).
+While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step. Also, our applications of LRP methods to case studies are for illustrative purposes only, and are not meant to be a formal estimation of LRPs for those SMUs. Furthermore, additional LRP methods could be developed in the future, aligned with the key principles outlined here (Section \@ref(principles)).
 
 Time-varying population processes, such as changes in productivity, have important impacts on biological benchmarks, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those impacts in Section \@ref(recommendations), a comprehensive review and evaluation of the impacts of time-varying parameters on LRPs is beyond the scope of this study. This theme is an important area for future research.
 
-Here, we follow recommendations of @withlerGeneticallyBasedTargets2018 on the biological assessments of hatchery-influenced populations under the WSP, as described in Section \@ref(est-methods). Following recent WSP assessments, we also removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds were available in our case studies. A review of methods for estimating proportion of hatchery-origin spawners or accounting for them in biological assessments was beyond the scope of this study.
+When developing LRPs, we follow the recommendations of @withlerGeneticallyBasedTargets2018 on biological assessments of hatchery-influenced populations under the WSP, as described in Section \@ref(est-methods). Following recent WSP assessments, we removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds were available in our case studies. A review <!--KH: should it be 'evaluation' instead of 'review'  --> of methods for estimating proportion of hatchery-origin spawners or accounting for them in biological assessments was beyond the scope of this study.
 
 Here we follow the recommendation of @holtIndicatorsStatusBenchmarks2009 to assess status of CUs using multiple metrics, and have implemented this approach using the Pacific Salmon Status Scanner tool (or, Salmon Scanner), documented in Pestal et al. (In prep.)^[Pestal, G., MacDonald, B, Grant, S, and Holt, C. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci. In prep.]. The Salmon Scanner was developed from the implementation of formal, peer-reviewed WSP assessments for Pacific salmon stocks in Canada (Section \@ref(est-methods)). A full review of the Salmon Scanner is beyond the scope of this paper. <!-- Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.-->
 
