--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -237,6 +237,7 @@ The frequency of years in which the IFCRT distributional target failed to be met
 knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 ```
 
+\linebreak
 
 CU status in the Salmon Scanner tool for Interior Fraser Coho is driven by abundance metrics. Because absolute abundance data and benchmarks based on S~gen~ and S~MSY~ were available, the decision tree within the Salmon Scanner (Figure \@ref(fig:decision-tree)) most often assigned CU status based on this metric (Figures \@ref(fig:coho-CU-multiDim-Ricker) and \@ref(fig:coho-CU-multiDim-Ricker-Cap)). Though status in some cases was also influenced by absolute abundance relative to the threshold of 1500 spawners. This occurred in the Fraser Canyon CU between 2015 and 2017. In these years, the generational average of absolute spawning abundance was < 1500 spawners and the CU was assigned Red status under the first node of the decision tree even though spawning abundances are above S~gen~.
 
@@ -631,7 +632,7 @@ Taken together, these retrospective results highlight that caution should be use
 
 ### Projection LRPs
 
-Projection LRPs have the advantage of being able to incorporate uncertainty about current (and future) population and / or fishery dynamics into LRP estimates, whereas logistic regression LRPs represent conditions that have been previously experienced, which may or may not persist into the future. Projection LRPs also allow key structural uncertainties to be incorporated into LRP estimates through the combination of multiple projection scenarios. For example, in the current application, we chose not to apply a third formulation of the Ricker model with depensatory mortality that has been used previously [@kormanEvaluationFrameworkAssessing2019; @arbeiderInteriorFraserCoho2020]. However, future applications of projection LRP methods for Interior Fraser coho could easily incorporate depensation as an additional scenario in a model-average approach if this was considered a key uncertainty to be respresented.
+Projection LRPs have the advantage of being able to incorporate uncertainty about current (and future) population and / or fishery dynamics into LRP estimates, whereas logistic regression LRPs represent conditions that have been previously experienced, which may or may not persist into the future. Projection LRPs also allow key structural uncertainties to be incorporated into LRP estimates through the combination of multiple projection scenarios. For example, in the current application, we chose not to apply a third formulation of the Ricker model with depensatory mortality that has been used previously [@kormanEvaluationFrameworkAssessing2019; @arbeiderInteriorFraserCoho2020]. However, future applications of projection LRP methods for Interior Fraser coho could easily incorporate depensation as an additional scenario in a model-average approach if this was considered a key uncertainty to be represented.
 
 
 The sensitivity of projection LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, we set exploitation rates at the recent average as fishery restrictions since 1998 been stable. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above S~gen~ given that constant exploitation rate. However, Interior Fraser Coho are not managed using a fixed ER policy.  While harvest has been relatively constant for several recent years, target harvest rates can vary among years for several reasons, including fishery plans for other species (e.g., Fraser Sockeye Salmon). For years in which target exploitation rates are increased, the LRP would also need be increased accordingly to ensure that the underlying objective of all CUs above S~gen~ could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above S~gen~. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix). As a result, projection LRPs are not static measures of serious harm, as commonly developed for other stocks and species.
