Edits / comments on guidelines paper chapter 2

--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -5,7 +5,7 @@
 \begin{tcolorbox}[sharp corners, boxrule=0.2mm]
 \subsection*{Key Points:}
 \begin{itemize}
-\item Principles for identifying Pacific salmon LRPs are adapted from national guidance on LRPs, as:
+\item Principles for identifying Pacific salmon LRPs are adapted from national guidance on LRPs<!--, as:-->
 \item \textbf{Principle 1.} LRPs should be selected based on the best available information. 
 \item \textbf{Principle 2.} LRPs should be consistent with the goal of avoiding serious harm. 
 \item \textbf{Principle 3.} LRPs should be operational, i.e., feasible to calculate and relevant to policy and management.
@@ -24,12 +24,27 @@ Here we outline principles for developing LRPs for Pacific salmon, adapted from 
 
 **Principle 1**. LRPs should be selected based on the best available information for the SMU, including evidence of serious harm, data and knowledge informing underlying biological processes, traditional knowledge, and comparison with similar SMUs (Marentette et al. In prep.). Criteria for evaluating best scientific information developed for US National Standards may be applicable here [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review.  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty exists in identifying the most appropriate approach to define an LRP, these uncertainties should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with a candidate LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into the estimation of status and the uncertainties should be clearly communicated.
 
-Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous peer-reviewed stock assessments, should be considered. Although routine updates may not need formal peer review, new LRPs or the application of benchmarks and LRPs to new CUs and SMUs assessments may require peer review.  
+Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous peer-reviewed stock assessments, should be considered. Although routine updates may not need formal peer review, new LRPs or the application of benchmarks and LRPs to new CUs and SMUs <!--KH deletion: assessments--> may require peer review.  
 
 Similarly, best practices, or practices that have been demonstrated to work well, can be used to inform reference points, as defined by @sainsburyBestPracticeReference2008: "The ‘best practice’ concept is based on the best practice that has been demonstrated through use, and recognizes that views of what is ‘best’ will continuously improve with experience. Best practice is not an absolute or fixed entity, or a guarantee of adequacy. It is based on experience to date and it is expected to evolve over time."
 
 
 **Principle 2**. LRPs should be consistent with the goal of avoiding serious harm to the SMU, as described in @dfoFisheryDecisionMakingFramework2009 and Section \@ref(intro) of this paper. The LRP should be set above the level where serious harm occurs and should avoid long-term losses that may accompany such undesirable states, such as those related to fishing and ecosystem components, e.g., dependent predators [@dfoFisheryDecisionMakingFramework2009; @dfoPolicyNewFisheries2009]. In addition, LRPs should be representative of the entire SMU, including scenarios where components of the SMU (e.g., CUs) are thought to represent the SMU (Section \@ref(guidelines)). <!--CH: I have added this last sentence to align with Marentette et al. principle 2, below. However, it does sound a little awkward here.-->
+
+
+
+
+<!-- 
+
+KH: suggestion to change above sentence: "In addition, LRPs should be representative of the entire SMU, including scenarios where components of the SMU (e.g., CUs) are thought to represent the SMU (Section \@ref(guidelines))."
+
+to 
+
+In addition, LRPs should be representative of the entire SMU.  In cases where only components of an SMU are monitored (e.g., CUs), the monitored component can be used to assess SMU status when it is thought to represent the entire SMU (Section \@ref(guidelines)). 
+
+
+-->
+
 
 <!--Marentette et al Principle 2:
 2.1	Indicators and LRPs should be at minimum conceptually linked to one or more interpretations of serious harm such as impaired recruitment, productivity, resilience or ability to recover from perturbation.  
@@ -40,7 +55,7 @@ Similarly, best practices, or practices that have been demonstrated to work well
 
 <!--CH to consider further emphasizing possibility of using TK for identifying LRPs in other places in this WP?-->
 
-**Principle 3**. LRPs should be operational. They should be feasible to calculate based on data that are available and relevant to the policy context and management of fisheries on SMUs. Data availability varies widely among CUs and SMUs, requiring a variety of approaches for CU and SMU-level assessments. No one method will be operational across all cases.  Also, it is beneficial if LRPs are easy to communicate to managers, First Nations, and stakeholders in a way that informs decisions at time-scales relevant to management. Other operational considerations are cost-effectiveness and simplicity in understanding. 
+**Principle 3**. LRPs should be operational. They should be feasible to calculate based on data that are available and relevant to the policy context and management of fisheries on SMUs. <!--KH: do you need to say 'management of fisheries on SMUs', or can it just be 'management' more broadly?? --> Data availability varies widely among CUs and SMUs, requiring a variety of approaches for CU and SMU-level assessments. No one method will be operational across all cases.  Also, it is beneficial if LRPs are easy to communicate to managers, First Nations, and stakeholders in a way that informs decisions at time-scales relevant to management. Other operational considerations are cost-effectiveness and simplicity in understanding. 
 
 <!-- CW: How is this different from the previous principle, "based on best available information" I suggest we leave this principle with just the relevant to the policy and easy to communicate (although I think that "easy" is debatable, I would not say that Sgen and SPR40 are easy to communicate, I don't think most people understand them, but they can be used to inform decisions) 
 CH: this idea of 'feasible to calculate' came from Julie's recap at the TESA workshop where she mentioned how participants interpreted 'operational'. I'd prefer to leave in for now, but can take out in a later draft.
@@ -58,7 +73,9 @@ LRPs are part of harvest strategies and success in achieving an objective to avo
 At minimum, indicators, LRPs and therefore status should be feasible to measure or estimate. Other operational reasons to consider indicators, LRPs or status metrics may be: cost-effectiveness (impacting the ease and frequency of estimating stock status), communicability (affecting the ease of understanding), simplicity, the role that LRPs or stock status may play in HCRs or triggering the need for a rebuilding plan, or the need to estimate stock status to evaluate either trends over time or performance of management measures. These reasons are not mutually exclusive, and the relative priority of reasons that make a choice of indicator, LRP or metric of status “operationally useful” will be context-dependent, both within or across traditional versus procedural paradigms."
 -->
 
-**Principle 4**. LRPs should be reliably estimated. To the extent possible, LRPs should indicate a level above where serious harm occurs with acceptable accuracy and precision, instead of capturing random noise or observation errors. Reliable estimation will depend on the quality and frequency of data collection, model specification, and the evidence to support underlying relationships and population dynamics used to derive LRPs. Reliability can be addressed by checking the sensitivity of LRPs to uncertainties in underlying data, model or assumptions, simulation evaluation, or simply assessing plausibility given biological or life-history information about the SMU (Marentette et al. In prep.).
+**Principle 4**. LRPs should be reliably estimated. To the extent possible, LRPs should indicate a level above where serious harm occurs with acceptable accuracy and precision, instead of capturing random noise or observation errors. Reliable estimation will depend on the quality and frequency of data collection, model specification, and the evidence to support underlying relationships and population dynamics used to derive LRPs. Reliability can be addressed by checking the sensitivity of LRPs to uncertainties in underlying data, models, or assumptions via sensitivity analyses or simulation-evaluation, or simply by assessing plausibility given biological or life-history information about the SMU (Marentette et al. In prep.).
+
+<!--KH: I made an edirotial change to the previous sentence; please make sure I have not altered the meaning -->
 
 LRPs can be derived using multiple analytical approaches. If LRPs cannot be estimated reliably using one method or approach, then it is advisable to consider alternative approaches based on different sets of assumptions and/or data. When LRP estimates converge using different approaches, this increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.
 
@@ -81,7 +98,7 @@ Reliable estimation of limit reference points or stock status metrics can mean a
 "
 -->
 
-**Principle 5**. When selecting among multiple methods for defining LRPs, the choice should take into account uncertainty<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, population dynamics (parameters and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that rely on high quality data,  include fewer assumptions, and explicitly account for underlying uncertainties should be preferred. 
+**Principle 5**. When selecting among multiple methods for defining LRPs, the choice should take into account uncertainty<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, modelled population dynamics (parameter assumptions and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that rely on high quality data include fewer assumptions <!-- KH: not clear on the remainder of this sentence, so suggest removing ".., and explicitly account for underlying uncertainties should be preferred"-->. 
 
 When considering LRPs under alternative model assumptions, LRPs can be chosen based on strength of evidence for underlying assumptions or averaged when alternative assumptions are all equally plausible. Further, the sensitivity of LRPs to various underlying model assumptions or data quality/quantities can be evaluated in simulation evaluation, where LRPs that are less sensitive to key uncertainties would be preferred.
 
@@ -97,11 +114,12 @@ Principle 5: When selecting from multiple alternatives, the choice of stock stat
 -->
 
 
-**Principle 6**.  In addition to principles derived for marine species in general (Principles 1-5) and to meet the goals of DFO's Precautionary Approach Policy (Principle 2), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above Red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
+**Principle 6**.  In addition to principles derived for marine species in general (Principles 1-5) and to meet the goal of avoiding serious harm under DFO's Precautionary Approach Policy (Principle 2), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above Red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
 
 ## APPLYING THE PRINCIPLES TO LRP DEVELOPMENT
 
-Our goal is to provide overall guidelines on LRP development following the principles listed above while providing flexibility due to differences in biological characteristics and data types, qualities and quantities among Pacific salmon species and SMUs. We demonstrate the extent to which candidate LRP methods proposed here are aligned with these principles. Alternative LRP methods, aligned with these key principles, may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
+Our goal is to provide overall guidelines on LRP development following the principles listed above while providing flexibility due to differences in biological characteristics and types, qualities and quantities of data among Pacific salmon species and SMUs. We demonstrate the extent to which candidate LRP methods proposed here are aligned with these principles. <!--KH: can you be more specific on how / where we demonstrate this? - or, would it be more correct to say "We demonstrate the application of candidate LRP methods that are aligned with these principles? --> Additional LRP methods may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status; the development of these additional methods should be aligned with the key principles summarized here.
+<!--KH: editorial changes to the last sentence; please confirm that I have not changed the intent -->
 
 In the next section, methods for estimating CU status are described, as implemented in previous status assessments under the WSP. Candidate LRPs that integrate CU statuses are then proposed, and fall into two categories: those based on the proportion of component CUs above the Red zone called proportional LRPs, and those based on aggregate abundances, called aggregate abundance LRPs.  A more detailed description of LRPs is included in Holt et al. (In review). Guidelines on how to choose among LRPs is described in Section \@ref(guidelines). 
 
